@@ -1,0 +1,25 @@
+"index","key","desc","indep","ratio","B","B5","C","C0","CX","D","DEX","DEX1","DK","DM22","DM23","DM24","DM25","DM26","DM27","DM28","DU1","DU2","DU3","E","EX","EX1","F","FLX","G","GRD","H","IR","IX","P","PLAN","PX","Q","R","RH","RX","S","SA","SB","STB5","T","U","U1","U2","U3","V","VE3","VF","VG","VH","VLIN","VLR","VS","VSP","VSTP","VX","VXND","VXNE","VY","W","X","XI","XX","XZ","Y","Z","ZA","ZB","ZM","ZONE","ZP","ZQ","ZR","ZU","ZV","ZX","ZZ"
+1,"HF","Hydrodynamics fragment",0,1,"","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","D('Q','x')","D('R','x')","","","","","","","D('T','x')","","","","","","","","","","","","","","","","","","","","D('X','1..n,W')","","","","D('Y','1..n')","","","","","","","","","","","D('ZX','10..n+11')",""
+2,"ICCG","Incomplete Cholesky – Conjugate Gradient (excerpt)",0,"0,1","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","D('V','1..n+1')","","","","","","","","","","","","","","","D('X','1..n+1,W')","","","","","","","","","","","","","","","",""
+3,"IP","Inner product",0,1,"","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","D('Q','o')","","","","","","","","","","","","","","","","","","","","","","","","","","","","D('X','1..n')","","","","","D('Z','1..n')","","","","","","","","","","",""
+4,"BLE","Banded linear equations",0,1,"","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","D('XZ','1..n,W')","D('Y','5..n')","","","","","","","","","","","",""
+5,"TDE(nv)","Tri-diagonal elimination, below diagonal (no vectors)",0,1,"","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","D('X','1..n,W')","","","","D('Y','2..n')","D('Z','2..n')","","","","","","","","","","",""
+6,"GLRE","General linear recurrence equations ",0,"0,06","D('B','2..n,1..n')","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","D('W','1..n-1,W')","","","","","","","","","","","","","","","","",""
+7,"ESF","Equation of state fragment",0,"0,99","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","D('Q','x')","D('R','x')","","","","","","","D('T','x')","D('U','1..n+6')","","","","","","","","","","","","","","","","","","","D('X','1..n,W')","","","","","","","","","","","","","","","",""
+8,"ADII","A.D.I. Integration",0,"0,1","","","","","","","","","","","","","","","","","D('DU1','2..n,W')","D('DU2','2..n,W')","D('DU3','2..n,W')","","","","","","","","","","","","","","","","","","","","","","","","D('U1','1..4,1..n+1,1..2,W')","D('U2','1..4,1..n+1,1..2,W')","D('U3','1..4,1..n+1,1..2,W')","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","",""
+9,"IPR","Integrate predictors",0,"0,1","","","","D('C0','x')","","","","","","D('DM22','x')","D('DM23','x')","D('DM24','x')","D('DM25','x')","D('DM26','x')","D('DM27','x')","D('DM28','x')","","","","","","","","","","","","","","","","D('PX','1..13,1..n,W')","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","",""
+10,"DPR","Difference predictors",0,"0,1","","","","","D('CX','5..5,1..n')","","","","","","","","","","","","","","","","","","","","","","","","","","","D('PX','5..13,1..n,W')","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","",""
+11,"FS/PS(nv)","First sum. Partial sums. (no vectors)",0,1,"","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","D('X','1..n,W')","","","","D('Y','1..n')","","","","","","","","","","","",""
+12,"FD","First differential",0,1,"","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","D('X','1..n,W')","","","","D('Y','2..n+1')","","","","","","","","","","","",""
+13,"2D PIC","2-D Particle in cell",1,"0,06","D('B','1..64,1..64')","","D('C','1..64,1..64')","","","","","","","","","","","","","","","","","D('E','32..95')","","","D('F','32..95')","","","","D('H','1..64,1..64,W')","","","D('P','1..4,1..n,W')","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","D('Y','32..95')","D('Z','32..95')","","","","","","","","","","",""
+14,"1D PIC","1-D Particle in cell",1,1,"","","","","","","D('DEX','1..max(GRD)')","D('DEX1','1..n,W')","","","","","","","","","","","","","D('EX','1..max(GRD)')","D('EX1','1..n,W')","","D('FLX','x')","","D('GRD','1..n')","","D('IR','1..n,W')","D('IX','1..n,W')","","","","","","D('RH','1..2048,W')","D('RX','1..n,W')","","","","","","","","","","","","","","","","","","","","D('VX','1..n,W')","","","","","","D('XI','1..n,W')","D('XX','1..n,W')","","","","","","","","","","","","","",""
+15,0,"Casual Fortran. Development version",0,"0,1","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","D('R','o')","","","D('S','o')","","","","D('T','o')","","","","","","","D('VF','1..n,1..7')","D('VG','1..n,1..7')","D('VH','1..n,1..7')","","","D('VS','1..n,1..7,W')","","","","","","D('VY','1..n,1..7,W')","","","","","","","","","","","","","","","","","",""
+16,"MC","Monte Carlo search loop",1,"0,07","","","","","","D('D','min(ZONE)-4...max(ZONE)')","","","","","","","","","","","","","","","","","","","","","","","","","D('PLAN','?')","","","D('R','x')","","","D('S','x')","","","","D('T','x')","","","","","","","","","","","","","","","","","","","","","","","","","","","","","D('ZONE','?')","","","","","","",""
+17,"ICC(nv)","Implicit, conditional computation (no vectors)",1,"0,1","","","","","","","","","","","","","","","","","","","","","","","","","D('G','1..n')","","","","","","","","","","","","","","","","","","","","","","D('VE3','1..n,W')","","","","D('VLIN','1..n')","D('VLR','1..n')","","D('VSP','1..n')","D('VSTP','1..n')","","D('VXND','1..n,W')","D('VXNE','1..n,W')","","","","","","","","","","","","","","","","","","",""
+18,"2D EHF","2-D Explicit hydrodynamics fragment",0,"0,1","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","D('ZA','1..n+1,1..7,W')","D('ZB','1..n+1,1..7,W')","D('ZM','1..n+1,1..7')","","D('ZP','1..n+1,1..7')","D('ZQ','1..n+1,1..7')","D('ZR','1..n+1,1..7,W')","D('ZU','1..n+1,1..7,W')","D('ZV','1..n+1,1..7,W')","","D('ZZ','1..n+1,1..7,W')"
+19,"GLRE(nv)","General linear recurrence equations (no vectors)",0,"0,1","","D('B5','1..n,W')","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","D('SA','1..n')","D('SB','1..n')","D('STB5','xw')","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","",""
+20,"DOT: Rec(nv)","Discrete ordinates transport: recurrence (no vectors)",1,1,"","","","","","","","","D('DK','x')","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","D('T','x')","D('U','1..n')","","","","D('V','1..n')","","","","","","","","","","D('VX','1..n')","","","","D('W','1..n')","D('X','1..n,W')","","D('XX','1..n+1,W')","","D('Y','1..n')","D('Z','1..n')","","","","","","","","","","",""
+21,"MM","Matrix-matrix product",0,"0,1","","","","","D('CX','1..25,1..n')","","","","","","","","","","","","","","","","","","","","","","","","","","","D('PX','1..25,1..n,W')","","","","","","","","","","","","","","","","","","","","","","","","","","","D('VY','1..25,1..25')","","","","","","","","","","","","","","","","","",""
+22,"PD","Planckian distribution",0,"0,1","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","D('U','1..n,W')","","","","D('V','1..n')","","","","","","","","","","","","","","D('W','1..n,W')","D('X','1..n')","","","","D('Y','1..n,W')","","","","","","","","","","","",""
+23,"2D IH","2-D Implicit hydrodynamics fragment",0,"0,1","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","D('ZA','1..n+1,1..7,W')","D('ZB','2..n,2..6')","","","","","D('ZR','2..n,2..6')","D('ZU','2..n,2..6')","D('ZV','2..n,2..6')","","D('ZZ','2..n,2..6')"
+24,"MIN","Find location of first minimum in array",1,1,"","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","D('X','1..n')","","","","","","","","","","","","","","","",""
